// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`deriveWeeklyPulse — degraded (anonymous, commitDetails:none) matches the reviewed degraded sheet snapshot 1`] = `
{
  "activity": {
    "days": [
      {
        "commits": 2,
        "label": "Mon",
      },
      {
        "commits": 1,
        "label": "Tue",
      },
      {
        "commits": 3,
        "label": "Wed",
      },
      {
        "commits": 1,
        "label": "Thu",
      },
      {
        "commits": 0,
        "label": "Fri",
      },
      {
        "commits": 1,
        "label": "Sat",
      },
      {
        "commits": 0,
        "label": "Sun",
      },
    ],
    "grid": {
      "rows": [
        {
          "label": "Mon",
          "values": [
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            2,
          ],
        },
        {
          "label": "Tue",
          "values": [
            0,
            0,
            0,
            0,
            0,
            1,
            1,
            1,
          ],
        },
        {
          "label": "Wed",
          "values": [
            0,
            0,
            1,
            0,
            1,
            1,
            1,
            3,
          ],
        },
        {
          "label": "Thu",
          "values": [
            0,
            0,
            0,
            1,
            0,
            0,
            1,
            1,
          ],
        },
        {
          "label": "Fri",
          "values": [
            1,
            1,
            1,
            0,
            1,
            1,
            1,
            0,
          ],
        },
        {
          "label": "Sat",
          "values": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
          ],
        },
        {
          "label": "Sun",
          "values": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
      "weekLabels": [
        "W16",
        "W17",
        "W18",
        "W19",
        "W20",
        "W21",
        "W22",
        "W23",
      ],
    },
    "peak": {
      "commits": 3,
      "dateISO": "2026-06-03",
      "dayLabel": "Wed",
    },
    "rail": [
      {
        "deltaPct": 60,
        "direction": "up",
        "key": "totalCommits",
        "label": "Total Commits",
        "sublabel": "vs last week",
        "value": 8,
      },
      {
        "key": "peakDay",
        "label": "Peak Day",
        "sublabel": "Jun 3, 2026",
        "value": 3,
      },
      {
        "display": "1.1",
        "key": "dailyAvg",
        "label": "Daily Avg",
        "value": 1,
      },
      {
        "display": "5/7",
        "key": "activeDays",
        "label": "Active Days",
        "sublabel": "71% of week",
        "value": 5,
      },
    ],
  },
  "changes": {
    "byArea": [
      {
        "area": "core",
        "color": "#2ea043",
        "files": 2,
      },
      {
        "area": "api",
        "color": "#238636",
        "files": 1,
      },
      {
        "area": "cli",
        "color": "#3fb950",
        "files": 1,
      },
      {
        "area": "docs",
        "color": "#d29922",
        "files": 1,
      },
      {
        "area": "io",
        "color": "#8957e5",
        "files": 1,
      },
      {
        "area": "render",
        "color": "#6e7681",
        "files": 1,
      },
      {
        "area": "other",
        "color": "#6e7681",
        "files": 1,
      },
    ],
    "rail": [
      {
        "deltaPct": 60,
        "direction": "up",
        "key": "totalCommits",
        "label": "Total Commits",
        "sublabel": "vs last week",
        "value": 8,
      },
      {
        "deltaPct": 33.3,
        "direction": "up",
        "key": "contributors",
        "label": "Contributors",
        "sublabel": "vs last week",
        "value": 4,
      },
    ],
    "totalFiles": 8,
  },
  "contributors": {
    "rail": [
      {
        "deltaPct": 60,
        "direction": "up",
        "key": "totalCommits",
        "label": "Total Commits",
        "sublabel": "vs last week",
        "value": 8,
      },
      {
        "deltaPct": 33.3,
        "direction": "up",
        "key": "contributors",
        "label": "Contributors",
        "sublabel": "vs last week",
        "value": 4,
      },
    ],
    "rows": [
      {
        "additions": 0,
        "avatarUrl": "https://avatars.example/ada.png",
        "commits": 2,
        "deletions": 0,
        "login": "ada",
        "name": "Ada Lovelace",
        "rank": 1,
      },
      {
        "additions": 0,
        "avatarUrl": "https://avatars.example/alan.png",
        "commits": 2,
        "deletions": 0,
        "login": "alan",
        "name": "Alan Turing",
        "rank": 2,
      },
      {
        "additions": 0,
        "avatarUrl": "https://avatars.example/grace.png",
        "commits": 2,
        "deletions": 0,
        "login": "grace",
        "name": "Grace Hopper",
        "rank": 3,
      },
      {
        "additions": 0,
        "avatarUrl": "https://avatars.example/katherine.png",
        "commits": 2,
        "deletions": 0,
        "login": "katherine",
        "name": "Katherine Johnson",
        "rank": 4,
      },
    ],
  },
  "fin": {
    "footer": "Built with m0saic",
    "headline": "THANK YOU!",
    "kpiStrip": [
      {
        "deltaPct": 60,
        "direction": "up",
        "key": "commits",
        "label": "Commits",
        "sublabel": "vs last week",
        "value": 8,
      },
      {
        "deltaPct": 33.3,
        "direction": "up",
        "key": "contributors",
        "label": "Contributors",
        "sublabel": "vs last week",
        "value": 4,
      },
    ],
    "qr": {
      "caption": "Make your own — m0saic.io",
      "url": "https://www.m0saic.io",
    },
    "subhead": "ANOTHER WEEK OF PROGRESS.",
  },
  "kpis": [
    {
      "deltaPct": 60,
      "direction": "up",
      "key": "commits",
      "label": "Commits",
      "sublabel": "vs last week",
      "value": 8,
    },
    {
      "deltaPct": 33.3,
      "direction": "up",
      "key": "contributors",
      "label": "Contributors",
      "sublabel": "vs last week",
      "value": 4,
    },
  ],
  "notable": {
    "items": [
      {
        "area": "core",
        "author": "Ada Lovelace",
        "dateISO": "2026-06-01",
        "hash": "c0ffee01",
        "kind": "perf",
        "reviewers": [
          "Grace Hopper",
        ],
        "signal": "win",
        "title": "core: speed up render loop with a SIMD path",
      },
      {
        "area": "io",
        "author": "Grace Hopper",
        "dateISO": "2026-06-01",
        "hash": "c0ffee02",
        "kind": "fix",
        "reviewers": [
          "Ada Lovelace",
        ],
        "signal": "win",
        "title": "io: fix memory leak in the stream reader",
      },
      {
        "area": "api",
        "author": "Alan Turing",
        "dateISO": "2026-06-02",
        "hash": "c0ffee03",
        "kind": "feat",
        "reviewers": [
          "Ada Lovelace",
          "Grace Hopper",
        ],
        "signal": "neutral",
        "title": "api: add pagination to the list endpoints",
      },
      {
        "area": "core",
        "author": "Ada Lovelace",
        "dateISO": "2026-06-03",
        "hash": "c0ffee04",
        "kind": "fix",
        "signal": "win",
        "title": "core: fix crash on empty input",
      },
      {
        "area": "tests",
        "author": "Alan Turing",
        "dateISO": "2026-06-04",
        "hash": "c0ffee07",
        "kind": "feat",
        "signal": "neutral",
        "title": "tests: add coverage for pagination edge cases",
      },
    ],
    "rail": [
      {
        "display": "63%",
        "key": "reviewCoverage",
        "label": "Review Coverage",
        "sublabel": "of commits",
        "value": 63,
      },
      {
        "deltaPct": 33.3,
        "direction": "up",
        "key": "contributors",
        "label": "Contributors",
        "sublabel": "vs last week",
        "value": 4,
      },
    ],
  },
  "period": {
    "endISO": "2026-06-07",
    "startISO": "2026-06-01",
    "weekNumber": 23,
  },
  "repo": {
    "fullName": "acme/rocket",
    "name": "rocket",
  },
}
`;

exports[`deriveWeeklyPulse — full coverage (SAMPLE_FACTS) matches the reviewed full-coverage sheet snapshot 1`] = `
{
  "activity": {
    "days": [
      {
        "commits": 2,
        "label": "Mon",
      },
      {
        "commits": 1,
        "label": "Tue",
      },
      {
        "commits": 3,
        "label": "Wed",
      },
      {
        "commits": 1,
        "label": "Thu",
      },
      {
        "commits": 0,
        "label": "Fri",
      },
      {
        "commits": 1,
        "label": "Sat",
      },
      {
        "commits": 0,
        "label": "Sun",
      },
    ],
    "grid": {
      "rows": [
        {
          "label": "Mon",
          "values": [
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            2,
          ],
        },
        {
          "label": "Tue",
          "values": [
            0,
            0,
            0,
            0,
            0,
            1,
            1,
            1,
          ],
        },
        {
          "label": "Wed",
          "values": [
            0,
            0,
            1,
            0,
            1,
            1,
            1,
            3,
          ],
        },
        {
          "label": "Thu",
          "values": [
            0,
            0,
            0,
            1,
            0,
            0,
            1,
            1,
          ],
        },
        {
          "label": "Fri",
          "values": [
            1,
            1,
            1,
            0,
            1,
            1,
            1,
            0,
          ],
        },
        {
          "label": "Sat",
          "values": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
          ],
        },
        {
          "label": "Sun",
          "values": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
      "weekLabels": [
        "W16",
        "W17",
        "W18",
        "W19",
        "W20",
        "W21",
        "W22",
        "W23",
      ],
    },
    "peak": {
      "commits": 3,
      "dateISO": "2026-06-03",
      "dayLabel": "Wed",
    },
    "rail": [
      {
        "deltaPct": 60,
        "direction": "up",
        "key": "totalCommits",
        "label": "Total Commits",
        "sublabel": "vs last week",
        "value": 8,
      },
      {
        "key": "peakDay",
        "label": "Peak Day",
        "sublabel": "Jun 3, 2026",
        "value": 3,
      },
      {
        "display": "1.1",
        "key": "dailyAvg",
        "label": "Daily Avg",
        "value": 1,
      },
      {
        "display": "5/7",
        "key": "activeDays",
        "label": "Active Days",
        "sublabel": "71% of week",
        "value": 5,
      },
    ],
  },
  "changes": {
    "byArea": [
      {
        "area": "api",
        "color": "#2ea043",
        "files": 2,
      },
      {
        "area": "cli",
        "color": "#238636",
        "files": 1,
      },
      {
        "area": "core",
        "color": "#3fb950",
        "files": 1,
      },
      {
        "area": "docs",
        "color": "#d29922",
        "files": 1,
      },
      {
        "area": "io",
        "color": "#8957e5",
        "files": 1,
      },
      {
        "area": "render",
        "color": "#6e7681",
        "files": 1,
      },
      {
        "area": "other",
        "color": "#6e7681",
        "files": 1,
      },
    ],
    "rail": [
      {
        "key": "totalFiles",
        "label": "Total Files Changed",
        "value": 8,
      },
      {
        "deltaPct": 13.1,
        "direction": "up",
        "key": "additions",
        "label": "Additions",
        "sublabel": "vs last week",
        "value": 814,
      },
      {
        "deltaPct": -36.4,
        "direction": "down",
        "key": "deletions",
        "label": "Deletions",
        "sublabel": "vs last week",
        "value": 112,
      },
      {
        "display": "+702",
        "key": "netChanges",
        "label": "Net Changes",
        "value": 702,
      },
    ],
    "totalFiles": 8,
  },
  "contributors": {
    "rail": [
      {
        "deltaPct": 60,
        "direction": "up",
        "key": "totalCommits",
        "label": "Total Commits",
        "sublabel": "vs last week",
        "value": 8,
      },
      {
        "deltaPct": 33.3,
        "direction": "up",
        "key": "contributors",
        "label": "Contributors",
        "sublabel": "vs last week",
        "value": 4,
      },
      {
        "deltaPct": 13.1,
        "direction": "up",
        "key": "additions",
        "label": "Additions",
        "sublabel": "vs last week",
        "value": 814,
      },
      {
        "deltaPct": -36.4,
        "direction": "down",
        "key": "deletions",
        "label": "Deletions",
        "sublabel": "vs last week",
        "value": 112,
      },
      {
        "deltaPct": 76.2,
        "direction": "up",
        "display": "+37",
        "key": "starsDelta",
        "label": "Stars Δ",
        "sublabel": "vs last week",
        "value": 37,
      },
    ],
    "rows": [
      {
        "additions": 350,
        "avatarUrl": "https://avatars.example/alan.png",
        "commits": 2,
        "deletions": 12,
        "login": "alan",
        "name": "Alan Turing",
        "rank": 1,
      },
      {
        "additions": 192,
        "avatarUrl": "https://avatars.example/ada.png",
        "commits": 2,
        "deletions": 44,
        "login": "ada",
        "name": "Ada Lovelace",
        "rank": 2,
      },
      {
        "additions": 152,
        "avatarUrl": "https://avatars.example/katherine.png",
        "commits": 2,
        "deletions": 8,
        "login": "katherine",
        "name": "Katherine Johnson",
        "rank": 3,
      },
      {
        "additions": 120,
        "avatarUrl": "https://avatars.example/grace.png",
        "commits": 2,
        "deletions": 48,
        "login": "grace",
        "name": "Grace Hopper",
        "rank": 4,
      },
    ],
  },
  "fin": {
    "footer": "Built with m0saic",
    "headline": "THANK YOU!",
    "kpiStrip": [
      {
        "deltaPct": 60,
        "direction": "up",
        "key": "commits",
        "label": "Commits",
        "sublabel": "vs last week",
        "value": 8,
      },
      {
        "deltaPct": 33.3,
        "direction": "up",
        "key": "contributors",
        "label": "Contributors",
        "sublabel": "vs last week",
        "value": 4,
      },
      {
        "key": "filesChanged",
        "label": "Files Changed",
        "value": 8,
      },
      {
        "deltaPct": 76.2,
        "direction": "up",
        "display": "+37",
        "key": "starsDelta",
        "label": "Stars Δ",
        "sublabel": "vs last week",
        "value": 37,
      },
    ],
    "qr": {
      "caption": "Make your own — m0saic.io",
      "url": "https://www.m0saic.io",
    },
    "subhead": "ANOTHER WEEK OF PROGRESS.",
  },
  "kpis": [
    {
      "deltaPct": 60,
      "direction": "up",
      "key": "commits",
      "label": "Commits",
      "sublabel": "vs last week",
      "value": 8,
    },
    {
      "deltaPct": 33.3,
      "direction": "up",
      "key": "contributors",
      "label": "Contributors",
      "sublabel": "vs last week",
      "value": 4,
    },
    {
      "deltaPct": 13.1,
      "direction": "up",
      "key": "additions",
      "label": "Additions",
      "sublabel": "vs last week",
      "value": 814,
    },
    {
      "deltaPct": -36.4,
      "direction": "down",
      "key": "deletions",
      "label": "Deletions",
      "sublabel": "vs last week",
      "value": 112,
    },
    {
      "key": "filesChanged",
      "label": "Files Changed",
      "value": 8,
    },
    {
      "deltaPct": 76.2,
      "direction": "up",
      "display": "+37",
      "key": "starsDelta",
      "label": "Stars Δ",
      "sublabel": "vs last week",
      "value": 37,
    },
    {
      "key": "pullRequests",
      "label": "Pull Requests",
      "value": 9,
    },
    {
      "key": "mergedPrs",
      "label": "Merged PRs",
      "value": 7,
    },
  ],
  "notable": {
    "items": [
      {
        "area": "core",
        "author": "Ada Lovelace",
        "dateISO": "2026-06-01",
        "hash": "c0ffee01",
        "kind": "perf",
        "reviewers": [
          "Grace Hopper",
        ],
        "signal": "win",
        "title": "core: speed up render loop with a SIMD path",
      },
      {
        "area": "api",
        "author": "Alan Turing",
        "dateISO": "2026-06-02",
        "hash": "c0ffee03",
        "kind": "feat",
        "reviewers": [
          "Ada Lovelace",
          "Grace Hopper",
        ],
        "signal": "neutral",
        "title": "api: add pagination to the list endpoints",
      },
      {
        "area": "tests",
        "author": "Alan Turing",
        "dateISO": "2026-06-04",
        "hash": "c0ffee07",
        "kind": "feat",
        "signal": "neutral",
        "title": "tests: add coverage for pagination edge cases",
      },
      {
        "area": "cli",
        "author": "Katherine Johnson",
        "dateISO": "2026-06-06",
        "hash": "c0ffee08",
        "kind": "feat",
        "reviewers": [
          "Ada Lovelace",
        ],
        "signal": "neutral",
        "title": "cli: add a --watch flag",
      },
      {
        "area": "render",
        "author": "Grace Hopper",
        "dateISO": "2026-06-03",
        "hash": "c0ffee06",
        "kind": "chore",
        "reviewers": [
          "Alan Turing",
        ],
        "signal": "neutral",
        "title": "render: cache the glyph atlas between frames",
      },
    ],
    "rail": [
      {
        "key": "mergedPrs",
        "label": "Merged PRs",
        "value": 7,
      },
      {
        "display": "63%",
        "key": "reviewCoverage",
        "label": "Review Coverage",
        "sublabel": "of commits",
        "value": 63,
      },
      {
        "key": "openIssues",
        "label": "Open Issues",
        "value": 42,
      },
      {
        "deltaPct": 33.3,
        "direction": "up",
        "key": "contributors",
        "label": "Contributors",
        "sublabel": "vs last week",
        "value": 4,
      },
    ],
  },
  "period": {
    "endISO": "2026-06-07",
    "startISO": "2026-06-01",
    "weekNumber": 23,
  },
  "repo": {
    "fullName": "acme/rocket",
    "name": "rocket",
  },
}
`;
